--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@dnd-kit/core": "^6.3.1",
         "@dnd-kit/sortable": "^10.0.0",
         "@dnd-kit/utilities": "^3.2.2",
+        "@headlessui/react": "^2.2.7",
         "@hookform/resolvers": "^3.9.0",
         "@inertiajs/react": "^2.0.17",
         "@radix-ui/react-accordion": "^1.2.0",
@@ -51,10 +52,12 @@
         "cmdk": "^1.0.0",
         "date-fns": "^3.6.0",
         "embla-carousel-react": "^8.3.0",
+        "i": "^0.3.7",
         "input-otp": "^1.2.4",
         "laravel-vite-plugin": "^1.2.0",
         "lucide-react": "^0.462.0",
         "next-themes": "^0.3.0",
+        "npm": "^11.5.2",
         "react": "^18.3.1",
         "react-day-picker": "^8.10.1",
         "react-dom": "^18.3.1",
