--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@dnd-kit/utilities": "^3.2.2",
         "@headlessui/react": "^2.2.7",
         "@hookform/resolvers": "^3.9.0",
+        "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/react": "^2.0.17",
         "@radix-ui/react-accordion": "^1.2.0",
         "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -47,6 +48,7 @@
         "@tanstack/react-query": "^5.56.2",
         "@tanstack/react-table": "^8.21.3",
         "@vitejs/plugin-react": "^4.2.0",
+        "axios": "^1.11.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.0.0",
