--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
         "tailwind-merge": "^2.5.2",
         "tailwindcss-animate": "^1.0.7",
         "use-debounce": "^10.0.5",
+        "uuid": "^11.1.0",
         "vaul": "^0.9.3",
         "ziggy-js": "^2.5.3",
         "zod": "^3.23.8"
