--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "build": "vite build",
         "build:dev": "vite build --mode development",
         "lint": "eslint .",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "play": "NODE_ENV=development tsx watch --tsconfig ./tsconfig.json ./src/codeplay.ts"
     },
     "dependencies": {
         "@dnd-kit/core": "^6.3.1",
@@ -96,6 +97,7 @@
         "prettier-plugin-organize-imports": "^4.2.0",
         "prettier-plugin-tailwindcss": "^0.6.14",
         "tailwindcss": "^3.4.11",
+        "tsx": "^4.20.4",
         "typescript": "^5.5.3",
         "typescript-eslint": "^8.0.1",
         "vite": "^5.4.1"
