--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.9.0",
+        "@laravel/echo-react": "^2.2.0",
         "@tailwindcss/typography": "^0.5.15",
         "@types/node": "^22.17.0",
         "@types/react": "^18.3.3",
@@ -91,11 +92,13 @@
         "eslint-plugin-react-hooks": "^5.1.0-rc.0",
         "eslint-plugin-react-refresh": "^0.4.9",
         "globals": "^15.9.0",
+        "laravel-echo": "^2.2.0",
         "lovable-tagger": "^1.1.7",
         "postcss": "^8.4.47",
         "prettier": "^3.6.2",
         "prettier-plugin-organize-imports": "^4.2.0",
         "prettier-plugin-tailwindcss": "^0.6.14",
+        "pusher-js": "^8.4.0",
         "tailwindcss": "^3.4.11",
         "tsx": "^4.20.4",
         "typescript": "^5.5.3",
