--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -1,57 +1,58 @@
 name: 🚀 Deploy Laravel application
 
 on:
-  push:
-    branches:
-      - deploy
+    push:
+        branches:
+            - development
 
 jobs:
-  app-laravel:
-    name: 🎉 Test Deploy
-    runs-on: ubuntu-latest
-    steps:
-      - name: 🚚 Get latest code
-        uses: actions/checkout@v4
+    app-laravel:
+        name: 🎉 Test Deploy
+        runs-on: ubuntu-latest
+        steps:
+            - name: 🚚 Get latest code
+              uses: actions/checkout@v4
 
-      - name: Install Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20" # Specify your Node.js version heres
+            - name: Install Node.js
+              uses: actions/setup-node@v4
+              with:
+                  node-version: "20" # Specify your Node.js version heres
 
-      - name: Install and build with npm
-        run: |
-          npm install
-          npm run build
+            - name: Install and build with npm
+              run: |
+                  npm install
+                  npm run build
 
-      # - name: Install PHP and Composer
-      #   uses: shivammathur/setup-php@v2
-      #   with:
-      #     php-version: "8.3" # Specify your PHP version here
-      #     extensions: mbstring, xml, bcmath, gd, curl
-      #     coverage: none
+            # - name: Install PHP and Composer
+            #   uses: shivammathur/setup-php@v2
+            #   with:
+            #     php-version: "8.3" # Specify your PHP version here
+            #     extensions: mbstring, xml, bcmath, gd, curl
+            #     coverage: none
 
-      - name: Install Composer dependencies
-        run: composer install
-      - name: Deploy to server
-        uses: easingthemes/ssh-deploy@main
-        with:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-          ARGS: "-rlgoDzvc -i"
-          SOURCE: "./"
-          REMOTE_HOST: 46.202.158.95
-          REMOTE_USER: u495568265
-          REMOTE_PORT: 65002
-          TARGET: /home/u495568265/domains/test.secondvintage.com/public_html
-          EXCLUDE: "/node_modules/, /.github/, /.git/, /README.md, /.vscode, /docs"
-          SCRIPT_BEFORE: |
-            rm -rf /home/u495568265/domains/test.secondvintage.com/public_html/database/migrations /home/u495568265/domains/test.secondvintage.com/public_html/app/Console/Commands
-          SCRIPT_AFTER: |
-            echo "Run after script"
-            cd /home/u495568265/domains/test.secondvintage.com/public_html
-            rm -rf *.sh
+            - name: Install Composer dependencies
+              run: composer install
+            - name: Deploy to server
+              uses: easingthemes/ssh-deploy@main
+              with:
+                  SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+                  ARGS: "-rlgoDzvc -i"
+                  SOURCE: "./"
+                  REMOTE_HOST: 46.202.158.95
+                  REMOTE_USER: u495568265
+                  REMOTE_PORT: 65002
+                  TARGET: /home/u495568265/domains/test.secondvintage.com/public_html
+                  EXCLUDE: "/node_modules/, /.github/, /.git/, /README.md, /.vscode, /docs"
+                  SCRIPT_BEFORE: |
+                      rm -rf /home/u495568265/domains/test.secondvintage.com/public_html/database/migrations /home/u495568265/domains/test.secondvintage.com/public_html/app/Console/Commands
+                  SCRIPT_AFTER: |
+                      echo "Run after script"
+                      cd /home/u495568265/domains/test.secondvintage.com/public_html
+                      rm -rf *.sh
 
-            php artisan putenv APP_ENV="local"
-            php artisan migrate
-            php artisan storage:link &> /dev/null
-            php artisan optimize:clear
-            php artisan putenv APP_ENV="production"
+                      php artisan putenv APP_ENV="local"
+                      php artisan migrate
+                      php artisan storage:link &> /dev/null
+                      php artisan optimize:clear
+                      php artisan db:seed --class=HelperSeeder
+                      php artisan putenv APP_ENV="production"
