--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -35,7 +35,7 @@ jobs:
             - name: Deploy to server
               uses: easingthemes/ssh-deploy@main
               with:
-                  SSH_PRIVATE_KEY: "SV_CRM_REPO_KEY"
+                  SSH_PRIVATE_KEY: ${{ secrets.SV_CRM_REPO_KEY }}
                   ARGS: "-rlgoDzvc -i"
                   SOURCE: "./"
                   REMOTE_HOST: 46.202.158.95
