--- a/package.json
+++ b/package.json
@@ -56,11 +56,13 @@
         "embla-carousel-react": "^8.3.0",
         "i": "^0.3.7",
         "input-otp": "^1.2.4",
+        "jspdf": "^3.0.3",
         "laravel-vite-plugin": "^1.2.0",
         "lodash": "^4.17.21",
         "lucide-react": "^0.462.0",
         "next-themes": "^0.3.0",
         "npm": "^11.5.2",
+        "qrcode": "^1.5.4",
         "qs": "^6.14.0",
         "react": "^18.3.1",
         "react-day-picker": "^8.10.1",
@@ -83,6 +85,7 @@
         "@laravel/echo-react": "^2.2.0",
         "@tailwindcss/typography": "^0.5.15",
         "@types/node": "^22.17.0",
+        "@types/qrcode": "^1.5.5",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react": "^5.0.3",
